THIS COMMIT IS BROKEN!
Ok, so not so much broken as only half-done, but I haven't checked in for quite some time.

This check-in covers all <a ...> and <img ...> based buttons being now skinable. It also has the start of the media library becoming translatable and skinnable. It's not done. No sir, not at all.

Also, there is a known issue with guacamole 0.9.2 (https://glyptodon.org/jira/browse/GUAC-789) that seems to effect us. So that's broken, too.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -154,3 +154,51 @@
 		</td>
 	</tr>
 <!-- end generic-note -->
+
+<!-- start disabled_button -->
+<span class="disabled_button">#!replace!button_text!#</span>
+<!-- end disabled_button -->
+
+<!-- start enabled_button -->
+<a href="#!replace!button_link!#" class="#!replace!button_class!#">#!replace!button_text!#</a>
+<!-- end enabled_button -->
+
+<!-- start enabled_button_new_tab -->
+<a href="#!replace!button_link!#" class="#!replace!button_class!#" target="_new">#!replace!button_text!#</a>
+<!-- end enabled_button_new_tab -->
+
+<!-- start enabled_button_no_class -->
+<a href="#!replace!button_link!#">#!replace!button_text!#</a>
+<!-- end enabled_button_no_class -->
+
+<!-- start enabled_button_no_class_new_tab -->
+<a href="#!replace!button_link!#" target="_new">#!replace!button_text!#</a>
+<!-- end enabled_button_no_class_new_tab -->
+
+<!-- start enabled_button_defined_class -->
+<a href="#!replace!button_link!#" class="#!replace!button_class!#">#!replace!button_text!#</a>
+<!-- end enabled_button_defined_class -->
+
+<!-- start new_line -->
+<br />
+<!-- end new_line -->
+
+<!-- start image -->
+<img src="#!replace!image_source!#" alt="#!replace!alt_text!#">
+<!-- end image -->
+
+<!-- start image_with_js -->
+<img #!replace!javascript!# src="#!replace!image_source!#" alt="#!replace!alt_text!#">
+<!-- end image_with_js -->
+
+<!-- start form-input -->
+			<input type="#!replace!type!#" name="#!replace!name!#" id="#!replace!id!#" value="#!replace!value!#" class="#!replace!class!#">
+<!-- end form-input -->
+
+<!-- start form-input-no-class -->
+			<input type="#!replace!type!#" name="#!replace!name!#" id="#!replace!id!#" value="#!replace!value!#">
+<!-- end form-input-no-class -->
+
+<!-- start form-input-no-class-defined-width -->
+			<input type="#!replace!type!#" name="#!replace!name!#" id="#!replace!id!#" value="#!replace!value!#" style="width: #!replace!width!#;">
+<!-- end form-input-no-class-defined-width -->
