--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -348,7 +348,7 @@
 						<table class="hidden_table" width="100%">
 							<tr>
 								<td width="50%" class="hidden_td">
-									<input type="submit" name="save" id="save" value="Save" class="button">
+									<input type="submit" name="save" id="save" value="Save" class="bold_button">
 								</td>
 								<td width="50%" class="hidden_td">
 									#!replace!push_button!#
@@ -555,7 +555,7 @@
 	<input type="hidden" name="task" value="load_config">
 	<tr>
 		<td>
-			<a href="#!conf!sys::backup_url!#" download><span class="button">#!string!button_0041!#</span></a>
+			<a href="#!conf!sys::backup_url!#" download><span class="bold_button">#!string!button_0041!#</span></a>
 		</td>
 		<td>
 			#!string!explain_0036!#
@@ -566,7 +566,7 @@
 			#!string!row_0132!#
 		</td>
 		<td>
-			<input type="file" name="file" value=""> <input type="submit" name="null" value="#!string!row_0132!#" class="button">
+			<input type="file" name="file" value=""> <input type="submit" name="null" value="#!string!row_0132!#" class="bold_button">
 		</td>
 	</tr>
 	<tr>
