--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -64,7 +64,7 @@
 	</tr>
 	<tr>
 		<td colspan="2">
-			<div class="align_right"><a href="#!replace!url!#" class="button">#!string!button_0016!#</a></div>
+			<div class="align_right"><a href="#!replace!url!#" class="bold_button">#!string!button_0016!#</a></div>
 		</td>
 	</tr>
 </table>
@@ -302,7 +302,7 @@
 			&nbsp;
 		</td>
 		<td colspan="2" rowspan="5">
-			<input type="submit" name="change" value="#!string!button_0019!#" class="button">
+			<input type="submit" name="change" value="#!string!button_0019!#" class="bold_button"">
 		</td>
 	</tr>
 	<tr><td style="height:10px; padding:0px" colspan="3"></td></tr>
@@ -881,7 +881,7 @@
 			<input type="hidden" name="max_ram" value="#!replace!max_ram!#">
 			<input type="hidden" name="max_cores" value="#!replace!max_cores!#">
 			<input type="hidden" name="max_storage" value="#!replace!max_storage!#">
-			<div class="align_right"><input type="submit" name="confirm" value="#!string!button_0004!#" class="button"></div>
+			<div class="align_right"><input type="submit" name="confirm" value="#!string!button_0004!#" class="bold_button"></div>
 		</td>
 	</tr>
 	</form>
