This commit still doesn't work
I renamed a bunch of templates to switch _ to - for consistency's sake. Got more of the Media Library HTML and text skinable/translatable. Still have a few hundred lines left to work through.

Also, guacamole is still broken.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -155,29 +155,29 @@
 	</tr>
 <!-- end generic-note -->
 
-<!-- start disabled_button -->
+<!-- start disabled-button -->
 <span class="disabled_button">#!replace!button_text!#</span>
-<!-- end disabled_button -->
+<!-- end disabled-button -->
 
-<!-- start enabled_button -->
+<!-- start enabled-button -->
 <a href="#!replace!button_link!#" class="#!replace!button_class!#">#!replace!button_text!#</a>
-<!-- end enabled_button -->
+<!-- end enabled-button -->
 
-<!-- start enabled_button_new_tab -->
+<!-- start enabled-button-new-tab -->
 <a href="#!replace!button_link!#" class="#!replace!button_class!#" target="_new">#!replace!button_text!#</a>
-<!-- end enabled_button_new_tab -->
+<!-- end enabled-button-new-tab -->
 
-<!-- start enabled_button_no_class -->
+<!-- start enabled-button-no-class -->
 <a href="#!replace!button_link!#">#!replace!button_text!#</a>
-<!-- end enabled_button_no_class -->
+<!-- end enabled-button-no-class -->
 
-<!-- start enabled_button_no_class_new_tab -->
+<!-- start enabled-button-no-class-new-tab -->
 <a href="#!replace!button_link!#" target="_new">#!replace!button_text!#</a>
-<!-- end enabled_button_no_class_new_tab -->
+<!-- end enabled-button-no-class-new-tab -->
 
-<!-- start enabled_button_defined_class -->
+<!-- start enabled-button-defined-class -->
 <a href="#!replace!button_link!#" class="#!replace!button_class!#">#!replace!button_text!#</a>
-<!-- end enabled_button_defined_class -->
+<!-- end enabled-button-defined-class -->
 
 <!-- start new_line -->
 <br />
