--- a/html/skins/alteeve/media-library.html
+++ b/html/skins/alteeve/media-library.html
@@ -361,6 +361,106 @@
 <br />
 <!-- end image-and-upload-confirm -->
 
+<!-- start file-delete-confirm -->
+<table align="center">
+	<tr>
+		<td colspan="3" class="highlight_ready_bold">
+			#!replace!title!#
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="highlight_warning"><b>#!string!title_0133!#</b></span>
+		</td>
+		<td colspan="2" align="left">
+			<br />
+			#!replace!say_delete!#<br />
+			<br />
+			<i>#!string!explain_0055!#</i><br />
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td colspan="3">
+			<div class="align_right">#!replace!confirm_button!#</div>
+		</td>
+	</tr>
+	</form>
+</table>
+<br />
+<!-- end file-delete-confirm -->
+
+<!-- start file-delete-header -->
+<table align="center">
+	<tr>
+		<td colspan="3" class="highlight_ready_bold">
+			#!replace!title!#
+		</td>
+	</tr>
+	<tr>
+		<td colspan="3">
+			<br />
+			#!string!message_0247!#<br />
+			<br />
+<!-- end file-delete-header -->
+
+<!-- start file-delete-footer -->
+		</td>
+	</tr>
+	<tr>
+		<td colspan="3" class="highlight_ready_bold">
+			#!string!message_0120!#
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end file-delete-footer -->
+
+<!-- start file-delete-failed -->
+<table align="center">
+	<tr>
+		<td colspan="3" class="highlight_warning">
+			#!replace!title!#
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="highlight_warning"><b>#!string!row_0141!#</b></span>
+		</td>
+		<td colspan="2" align="left">
+			<br />
+			#!replace!message!#<br />
+			#!string!explain_0056!#<br />
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td colspan="3">
+			&nbsp;
+		</td>
+	</tr>
+	</form>
+</table>
+<br />
+<!-- end file-delete-failed -->
+
+<!-- start check-status-config-error -->
+<table align="center">
+	<tr>
+		<td class="highlight_bad">
+			#!string!title_0137!#
+		</td>
+		<td>
+			#!replace!message!#
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end check-status-config-error -->
+
+<!-- start  -->
+<!-- end  -->
+
 <!-- start  -->
 <!-- end  -->
 
