Untested but should be working commit
Finished adding id="..." to links, images and input fields. Redid the node control panel to be a single template instead of multiple small ones. Will be doing the same to the other main page panels shortly.

Oh, guacamole is still broked, but that is making progress, too. Browsers are blocking things because of the 80 -> 8080 linking. Will try to resolve this with apache's mod_proxy.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -160,35 +160,31 @@
 <!-- end disabled-button -->
 
 <!-- start enabled-button -->
-<a href="#!replace!button_link!#" class="#!replace!button_class!#">#!replace!button_text!#</a>
+<a href="#!replace!button_link!#" id="#!replace!id!#" class="#!replace!button_class!#">#!replace!button_text!#</a>
 <!-- end enabled-button -->
 
 <!-- start enabled-button-new-tab -->
-<a href="#!replace!button_link!#" class="#!replace!button_class!#" target="_new">#!replace!button_text!#</a>
+<a href="#!replace!button_link!#" id="#!replace!id!#" class="#!replace!button_class!#" target="_new">#!replace!button_text!#</a>
 <!-- end enabled-button-new-tab -->
 
 <!-- start enabled-button-no-class -->
-<a href="#!replace!button_link!#">#!replace!button_text!#</a>
+<a href="#!replace!button_link!#" id="#!replace!id!#">#!replace!button_text!#</a>
 <!-- end enabled-button-no-class -->
 
 <!-- start enabled-button-no-class-new-tab -->
-<a href="#!replace!button_link!#" target="_new">#!replace!button_text!#</a>
+<a href="#!replace!button_link!#" id="#!replace!id!#" target="_new">#!replace!button_text!#</a>
 <!-- end enabled-button-no-class-new-tab -->
-
-<!-- start enabled-button-defined-class -->
-<a href="#!replace!button_link!#" class="#!replace!button_class!#">#!replace!button_text!#</a>
-<!-- end enabled-button-defined-class -->
 
 <!-- start new_line -->
 <br />
 <!-- end new_line -->
 
 <!-- start image -->
-<img src="#!replace!image_source!#" alt="#!replace!alt_text!#">
+<img src="#!replace!image_source!#" id="#!replace!id!#" alt="#!replace!alt_text!#">
 <!-- end image -->
 
 <!-- start image_with_js -->
-<img #!replace!javascript!# src="#!replace!image_source!#" alt="#!replace!alt_text!#">
+<img #!replace!javascript!# src="#!replace!image_source!#" id="#!replace!id!#" alt="#!replace!alt_text!#">
 <!-- end image_with_js -->
 
 <!-- start form-input -->
