Removed all reference to guacd::port. Will be updating the an-cdb installer in the next commit to proxy guacamole/tomcat behind apache. Added some text to the remote desktop link explaining how to get the on-screen keyboard.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -292,7 +292,7 @@
 <!-- start manager-server-show-details -->
 	<tr>
 		<td class="highlight_good_bold">
-			Boot Drive:
+			#!string!row_0152!#:
 		</td>
 		<td style="text-align: left;">
 			<span class="subtle_text">#!replace!current_boot_device!#</span><br />
@@ -342,6 +342,10 @@
 			#!replace!remote_icon!#<br />
 			<br />
 			#!replace!message!#<br />
+			<br />
+			<hr>
+			#!string!message_0259!#<br />
+			<hr>
 			<br />
 		</td>
 		<td>
@@ -1404,6 +1408,10 @@
 			#!replace!remote_icon!#<br />
 			<br />
 			#!replace!remote_message!#<br />
+			<br />
+			<hr>
+			#!string!message_0259!#<br />
+			<hr>
 			<br />
 		</td>
 	</tr>
