--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -344,7 +344,7 @@
 			#!replace!message!#<br />
 			<br />
 			<hr>
-			#!string!message_0259!#<br />
+			#!string!message_0329!#<br />
 			<hr>
 			<br />
 		</td>
@@ -460,6 +460,10 @@
 <!-- start one-line-message -->
 			#!replace!message!#<br />
 <!-- end one-line-message -->
+
+<!-- start one-line-message-fixed-width -->
+			<span class="fixed_width">#!replace!message!#</span><br />
+<!-- end one-line-message-fixed-width -->
 
 <!-- start add-server-to-anvil-failed-to-boot -->
 			<br />
@@ -722,6 +726,18 @@
 			#!string!message_0124!#<br />
 			<br />
 <!-- end provision-server-install-started-no-guacamole -->
+
+<!-- start provision-server-problem -->
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_bad_bold">
+			#!string!state_0008!#
+		</td>
+		<td>
+			<br />
+			#!replace!message!#<br />
+<!-- end provision-server-problem -->
 
 <!-- start provision-server-footer -->
 		</td>
@@ -1410,7 +1426,7 @@
 			#!replace!remote_message!#<br />
 			<br />
 			<hr>
-			#!string!message_0259!#<br />
+			#!string!message_0329!#<br />
 			<hr>
 			<br />
 		</td>
