Cleaned up some of the Media Library skin. More work needed though.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -155,6 +155,19 @@
 	</tr>
 <!-- end generic-note -->
 
+<!-- start shell-output-header -->
+	<tr>
+		<td class="highlight_warning_bold">
+			#!string!row_0155!#
+		</td>
+		<td>
+<!-- end shell-output-header -->
+
+<!-- start shell-output-footer -->
+		</td>
+	</tr>
+<!-- end shell-output-footer -->
+
 <!-- start disabled-button -->
 <span class="disabled_button">#!replace!button_text!#</span>
 <!-- end disabled-button -->
