--- a/html/skins/alteeve/media-library.html
+++ b/html/skins/alteeve/media-library.html
@@ -92,12 +92,16 @@
 <!-- start save-to-disk-header -->
 <table align="center">
 	<tr>
-		<td class="highlight_ready_bold">
+		<td class="highlight_ready_bold" colspan="2">
 			#!string!title_0123!#
 		</td>
 	</tr>
 	<tr>
+		<td class="highlight_good">
+			#!string!row_0153!#
+		</td>
 		<td>
+			<br />
 			#!string!message_0106!#<br />
 			<br />
 			#!string!explain_0049!#<br />
@@ -122,11 +126,14 @@
 		</td>
 	</tr>
 	<tr>
-		<td class="highlight_good">
+		<td class="highlight_good" colspan="2">
 			#!string!title_0125!#<br />
 		</td>
 	</tr>
 	<tr>
+		<td class="highlight_good">
+			#!string!row_0154!#
+		</td>
 		<td>
 			<br />
 			#!string!message_0299!#<br />
@@ -136,23 +143,39 @@
 <!-- end save-to-disk-starting -->
 
 <!-- start save-to-disk-failed -->
+		</tr>
+	</tr>
+	<tr>
+		<td class="highlight_warning_bold">
+			#!string!row_0133!#
+		</td>
+		<td>
 			<br />
 			#!string!message_0300!#<br />
 			<br />
+		</td>
+	</tr>
 <!-- end save-to-disk-failed -->
 
 <!-- start save-to-disk-success -->
-			<br />
-			#!string!message_0301!#<br />
-			<br />
-<!-- end save-to-disk-success -->
-
-<!-- start save-to-disk-footer -->
-		</td>
+		</tr>
 	</tr>
 	<tr>
 		<td class="highlight_good">
+			#!string!row_0154!#
+		</td>
+		<td>
 			<br />
+			#!string!message_0301!#<br />
+			<br />
+		</td>
+	</tr>
+<!-- end save-to-disk-success -->
+
+<!-- start save-to-disk-footer -->
+	<tr>
+		<td class="highlight_good" colspan="2">
+			&nbsp;<br />
 		</td>
 	</tr>
 </table>
